--- a/client/recipes/Recipes.html
+++ b/client/recipes/Recipes.html
@@ -1,5 +1,9 @@
 <template name="Recipes">
+{{#if $.Session.get 'newRecipe'}}
     {{> NewRecipe}}
+{{else}}
+    <button class="new-recipe">Nova receita</button>
+{{/if}}
     <section class="recipes">
     {{#if Template.subscriptionsReady}}
             {{#each recipes}}
